--- a/css/main.css
+++ b/css/main.css
@@ -8,3 +8,61 @@ body,
   background-color: black;
   opacity: 0.7;
 }
+
+.carousel-item {
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.carousel-item-banner1 {
+  background-image: url("../images/banner1.png");
+}
+.carousel-item-banner2 {
+  background-image: url("../images/banner2.png");
+}
+.carousel-item-banner3 {
+  background-image: url("../images/banner3.jpg");
+}
+.carousel-item-banner4 {
+  background-image: url("../images/montreal.jpg");
+}
+
+.carousel-caption {
+  top: 6rem;
+}
+
+.carousel-caption h1 {
+  font-size: 5rem;
+  font-weight: 700;
+  margin-top: 20px;
+}
+
+.carousel-caption p {
+  font-size: 1.2rem;
+  background-color: rgba(228, 233, 237, 0.3);
+  display: inline;
+  padding: 5px 30px;
+}
+
+.carousel-indicators {
+  bottom: 5rem;
+}
+
+.body__cards {
+  margin-top: -5rem;
+}
+
+.card {
+  background-color: #3d3d3d;
+  text-align: start;
+  padding: 50px 40px;
+}
+
+.card__btn {
+  width: fit-content;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: 500;
+}
