--- a/css/main.css
+++ b/css/main.css
@@ -111,11 +111,10 @@ footer {
 /* Handle the xs screen */
 @media screen and (max-width: 575px) {
   .navbar-brand a {
-    font-size: 0.5rem;
+    font-size: 1rem;
     padding-left: 10px;
     padding-right: 10px;
   }
-
   .carousel-caption {
     top: 5rem;
     padding-left: 0;
@@ -129,5 +128,14 @@ footer {
   }
   .footer__copy-right {
     font-size: 1rem;
+  }
+}
+
+/* Fix the mobile with the screen size less than 350px, such as iphoneSE */
+@media screen and (max-width: 350px) {
+  .navbar-brand a {
+    font-size: 0.8rem;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
